# otus_cpp_p_project

./: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Doxyfile  Makefile  Readme.txt  cmake_install.cmake  install_manifest.txt  otus_cpp_p_project-0.0.10-Linux.deb  otus_cpp_p_project-0.0.9-Linux.deb
.github/workflows/: release.yml
_CPack_Packages/Linux/DEB/otus_cpp_p_project-0.0.10-Linux/: control  md5sums
_CPack_Packages/Linux/DEB/otus_cpp_p_project-0.0.9-Linux/: control
halfSumFinder/: main.cpp
hsfInputGenerator/: main.cpp
hsfOutputVerifier/: main.cpp
hsfSearchOrderDemo/: main.cpp
hsfTester/: main.cpp
src/: halfsumfinder.cpp  halfsumfinder.h  set.cpp  set.h
util/: gendata.cpp  gendata.h  timer.h
